--- a/posts/关于我当键盘侠的三两事.md
+++ b/posts/关于我当键盘侠的三两事.md
@@ -20,7 +20,7 @@
 
 18年在学习Go的时候看[**Andrew**&**Brad**]([https://www.youtube.com/watch?v=yG-UaBJXZ80](https://www.youtube.com/watch?v=yG-UaBJXZ80)) 两位大佬结伴编程，被这熟练的指法和vim操作给show到了，下定决心提升自己的指法水平（代码可以写的烂，但是敲代码的姿势不能不帅 😾）。
 
-![IMG_0448](https://tva1.sinaimg.cn/large/008eGmZEly1gn0w5i6digj30kf0xonl9.jpg)
+![IMG_0448](https://tva1.sinaimg.cn/large/008eGmZEly1gn0wac295qg30dc07i7wh.gif)
 
 ## 0x02 反思
 
