--- a/posts/关于我当键盘侠的三两事.md
+++ b/posts/关于我当键盘侠的三两事.md
@@ -1,10 +1,10 @@
-# 关于我当键盘侠的两三事
+# [关于我当键盘侠的两三事](https://www.notion.so/d5aed5e1be3742ddaad27a599559d2e5)
 
 > We are typists first, and programmers second.
 我们先是键盘侠,然后才是程序员
 *— Jeff Atwood*
 
-​                             
+
 
 ## 0x00 二指禅
 
