--- a/posts/关于我当键盘侠的三两事.md
+++ b/posts/关于我当键盘侠的三两事.md
@@ -1,10 +1,12 @@
 # [关于我当键盘侠的两三事](https://www.notion.so/d5aed5e1be3742ddaad27a599559d2e5)
 
+本文由[Notion](https://www.notion.so/)撰写，访问[原文](https://www.notion.so/d5aed5e1be3742ddaad27a599559d2e5)获得更佳阅读体验。
+
 > We are typists first, and programmers second.
 我们先是键盘侠,然后才是程序员
 *— Jeff Atwood*
 
-
+​                             
 
 ## 0x00 二指禅
 
@@ -14,13 +16,15 @@
 
 学过指法也记过键盘按键位置和手指对应关系，但是最终难以形成肌肉记忆，最后还是变为二指禅。
 
-![Untitled](https://tva1.sinaimg.cn/large/008eGmZEly1gn0w5b7tgoj30kf0xonl9.jpg)
+![Untitled](https://tva1.sinaimg.cn/large/008eGmZEly1gn22ussc14j30kf0xonl9.jpg)
 
 ## 0x01 转折
 
-18年在学习Go的时候看[**Andrew**&**Brad**]([https://www.youtube.com/watch?v=yG-UaBJXZ80](https://www.youtube.com/watch?v=yG-UaBJXZ80)) 两位大佬结伴编程，被这熟练的指法和vim操作给show到了，下定决心提升自己的指法水平（代码可以写的烂，但是敲代码的姿势不能不帅 😾）。
+18年在学习Go的时候看**Andrew**&**Brad** 两位大佬结伴编程，被这熟练的指法和vim操作给show到了，下定决心提升自己的指法水平（代码可以写的烂，但是敲代码的姿势不能不帅 😾）。
 
-![IMG_0448](https://tva1.sinaimg.cn/large/008eGmZEly1gn0wac295qg30dc07i7wh.gif)
+[https://www.youtube.com/watch?v=yG-UaBJXZ80](https://www.youtube.com/watch?v=yG-UaBJXZ80)
+
+![IMG_0448](https://tva1.sinaimg.cn/large/008eGmZEly1gn22v3c44eg30dc07i7wh.gif)
 
 ## 0x02 反思
 
@@ -40,15 +44,32 @@
 
 因此关键就在于多加练习，让肌肉形成记忆，让代码变成热点代码。之前的训练量根本没法形成肌肉记忆。
 
-## 0x03 逆袭
+## 0x03 进步
 
-19年春节在家开始在[typing.com](http://typing.com/) 上练习指法每天差不多2h，课程会按不同区位循序渐进学习并不枯燥，而且练习过程中明显能感觉到自己指法水平的逐步提升也给我带来了正反馈，整个练习过程是相当愉快的。最终春节结束的时候我达到了40+wpm的速度，总练习时间是7天14h左右，对于这个结果较为满意。（终于可以当一个键盘侠了，好耶！ 👻）
+19年春节在家开始在[typing.com](http://typing.com/) 上练习指法每天差不多2h，课程会按不同区位循序渐进学习并不枯燥，而且练习过程中明显能感觉到自己指法水平的逐步提升也给我带来了正反馈，整个练习过程是相当愉快的。最终春节结束的时候我达到了[45+wpm](https://www.ratatype.com/u2881860/certificate/)的速度，总练习时间是7天14h左右，对于这个结果较为满意。（终于可以当一个键盘侠了，好耶！ 👻）
 
-![Untitled 1](https://tva1.sinaimg.cn/large/008eGmZEly1gn0w5zzxepj30oc0jdq46.jpg)
+![%E5%85%B3%E4%BA%8E%E6%88%91%E5%BD%93%E9%94%AE%E7%9B%98%E4%BE%A0%E7%9A%84%E4%B8%A4%E4%B8%89%E4%BA%8B%20cda1bc5fc3ba438ab92afc9a983d653b/Untitled%201.png](https://tva1.sinaimg.cn/large/008eGmZEly1gn12senrvlj30oc0jdq46.jpg)
 
-![Untitled 2](https://tva1.sinaimg.cn/large/008eGmZEly1gn0w5zbam3j30wj0o00wt.jpg)
+![%E5%85%B3%E4%BA%8E%E6%88%91%E5%BD%93%E9%94%AE%E7%9B%98%E4%BE%A0%E7%9A%84%E4%B8%A4%E4%B8%89%E4%BA%8B%20cda1bc5fc3ba438ab92afc9a983d653b/www.typing.com_student_lessons.png](https://tva1.sinaimg.cn/large/008eGmZEly1gn12sd9yraj30u00yvdpl.jpg)
 
-## 0x04 证书
+## 0x04 设备
 
-[证书](https://www.ratatype.com/u2881860/certificate/)
+锻炼形成的肌肉记忆是适配于设备的，因此选择一个合适的主力输入设备尤为重要。本人的工作平台是15寸macbook pro，其自带的剪刀脚键盘手感不佳，且很喜欢macbook的触摸板。因此我购买了[HHKB Professional静电容键盘](https://item.jd.com/28296484594.html) 。
 
+![](https://tva1.sinaimg.cn/large/008eGmZEly1gn12s82k4yj309e045taf.jpg)
+
+hhkb 60%配列的尺寸使其能放在macbook内置的键盘上，不影响触摸板和两侧音响的使用。并且搭配 [Karabiner](https://karabiner-elements.pqrs.org/) 可以在hhkb键盘启用的时候禁用内置键盘从而使得内置键盘不会因为压力误触。
+
+![Karabiner](https://karabiner-elements.pqrs.org/) ](https://tva1.sinaimg.cn/large/008eGmZEly1gn12sn8vu5j31cs0u0dve.jpg)
+
+我购买的hhkb是单模版本，hhkb的蓝牙版本是用干电池供电。有一个价格贵了很多，而且有一个巨大的电池仓。我使用了YDKB 的解决方案（使用锂电池供电，可循环充电，并外观上无电池仓），购买了自制主控进行安装。
+
+![YDKB主控](https://tva1.sinaimg.cn/large/008eGmZEly1gn12tkzssgj316k0u0x6q.jpg)
+
+
+
+
+
+最终结果如图
+
+![4861611641951_.pic](https://tva1.sinaimg.cn/large/008eGmZEly1gn12ul1hlbj31400u0ju2.jpg)
